# OOP

./: LAB4_Kolpakova_M8O-208B-20.docx  LAB6_Kolpakova_M8O-208B-20.docx  point.h  rectangle.cpp  variant.json
lab01/: LAB 0.1 Report Kolpakova 8-208B-20.docx  britishmoney.cpp  britishmoney.h
lab02/: LAB 0.2 Report Kolpakova 8-208B-20.docx
lab1/: LAB1_Kolpakova_M8O-208B-20.docx
oop_exercise_01/: BritishMoney.cpp  BritishMoney.h  CMakeLists.txt  LAB 0.1 Report Kolpakova 8-208B-20.docx  LAB1_Kolpakova_8-208B-20.docx  main.cpp  test_01.txt  test_02.txt  test_03.txt
oop_exercise_02/: BritishMoney.cpp  BritishMoney.h  CMakeLists.txt  LAB 0.2 Report Kolpakova 8-208B-20.docx  LAB2_Kolpakova_8-208B-20.docx  main.cpp  test_01.txt  test_02.txt  test_03.txt
oop_exercise_1/: CMakeLists.txt  LAB3_Kolpakova_8-208B-20.docx  figure.h  main.cpp  point.cpp  rectangle.h  square.cpp  square.h  triangle.cpp  triangle.h
oop_exercise_2/: CMakeLists.txt  LAB2_Kolpakova_M8O-208B-20.docx  LAB4_Kolpakova_M8O-208B-20.docx  main.cpp  tlinkedlist.cpp  tlinkedlist.h
oop_exercise_3/: CMakeLists.txt  LAB3_Kolpakova_M8O-208B-20.docx  LAB5_Kolpakova_M8O-208B-20.docx  main.cpp  tlinkedlist.cpp  tlinkedlist.h  triangle.cpp
oop_exercise_4/: CMakeLists.txt  LAB4_Kolpakova_M8O-208B-20.docx  LAB6_Kolpakova_M8O-208B-20.docx  figure.h  main.cpp  tlinkedlist.cpp  tlinkedlist.h  tlinkedlistitem.cpp  triangle.h
oop_exercise_5/: CMakeLists.txt  LAB5_Kolpakova_M8O-208B-20.docx  LAB7_Kolpakova_M8O-208B-20.docx  main.cpp  point.cpp  titterator.cpp  titterator.h  triangle.cpp
oop_exercise_6/: CMakeLists.txt  LAB8_Kolpakova_M8O-208B-20.docx  main.cpp  point.cpp  point.h  tallocator.cpp  tallocator.h  tbinarytree.cpp  tbinarytree.h  tbinarytreeitem.cpp  tbinarytreeitem.h  titterator.h  tlinkedlist.cpp  tlinkedlist.h  tlinkedlistitem.cpp  tlinkedlistitem.h  triangle.cpp  triangle.h  tvector.cpp  tvector.h
